5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1596_1016.log
== TEST (2019-04-02 12:47:56) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=base+altura/2.0
print("area:"),area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=base+altura/2.0
TypeError: unsupported operand type(s) for /: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:48:12) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=base+altura/2.0
print("area:"),area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=base+altura/2.0
TypeError: unsupported operand type(s) for /: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:48:35) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=(base+altura/2.0)
print("area:"),area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=(base+altura/2.0)
TypeError: unsupported operand type(s) for /: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:48:51) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura/2.0")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:48:59) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura/2.0")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:49:00) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura/2.0")
print("area:"),area

-- EXECUTION TIME:
0.201391
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
area:
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
area:
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
area:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:49:01) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura/2.0")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:49:20) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura/2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:49:52) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base*altura/2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:50:11) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base*altura/2")
print("area:"),area

-- EXECUTION TIME:
0.192434
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
area:
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
area:
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
area:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:29) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:35) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:35) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:36) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:36) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:38) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:38) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:39) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:40) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:41) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:41) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:41) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:42) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:42) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:43) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=("base+altura//2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:57) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base+altura/2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:51:11) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base+altura/2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:12) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base+altura/2")
print("area:"),area

-- EXECUTION TIME:
0.166338
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
area:
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
area:
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
area:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:51:12) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base+altura/2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:51:43) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print("area:"),area

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:55) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print("area:"),area

-- EXECUTION TIME:
0.185543
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
area:
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
area:
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
area:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:53:02) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round("area:(x,5)"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("area:(x,5)"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:53:32) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round("area:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("area:"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:53:57) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print("area:")

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:54:41) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round("area:")

-- ERROR:
File "XXXX", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:54:58) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round("area:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("area:"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:15) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round("area,5"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("area,5"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:29) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round("area,x"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("area,x"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:47) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:48) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- EXECUTION TIME:
0.120255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:48) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- EXECUTION TIME:
0.141318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:49) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:49) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- EXECUTION TIME:
0.102363
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1596/1016/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:56:49) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- EXECUTION TIME:
0.114505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:50) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:53) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2")
print(round(area,x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area,x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:25:35) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2.0")
print("area:")

-- OUTPUT:
area:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:25:39) 
-- CODE:
base=input("informe a base")
altura=input("informe a altura")
area=input("base*altura/2.0")
print("area:")

-- EXECUTION TIME:
0.133205
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
area:
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
area:
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
area:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
